src/DlibDotNet.Native/dlib/array2d/array2d.h

DLLEXPORT void array2d_matrix_get_row_column_rgb_alpha_pixel(void* row, const int templateRows, const int templateColumns, int32_t column, void** ret)
{
    array2d_matrix_get_row_column_template(rgb_alpha_pixel, row, templateRows, templateColumns, column, ret);
}
DLLEXPORT void array2d_matrix_get_row_column_hsi_pixel(void* row, const int templateRows, const int templateColumns, int32_t column, void** ret)
{
    array2d_matrix_get_row_column_template(hsi_pixel, row, templateRows, templateColumns, column, ret);
}
DLLEXPORT void array2d_matrix_set_row_column_uint8_t(void* row, const int templateRows, const int templateColumns, int32_t column, void* ret)
{
    array2d_matrix_set_row_column_template(uint8_t, row, templateRows, templateColumns, column, ret);
}
DLLEXPORT void array2d_matrix_set_row_column_uint16_t(void* row, const int templateRows, const int templateColumns, int32_t column, void* ret)
{
    array2d_matrix_set_row_column_template(uint16_t, row, templateRows, templateColumns, column, ret);
}
DLLEXPORT void array2d_matrix_set_row_column_uint32_t(void* row, const int templateRows, const int templateColumns, int32_t column, void* ret)
{
    array2d_matrix_set_row_column_template(uint32_t, row, templateRows, templateColumns, column, ret);
}
DLLEXPORT void array2d_matrix_set_row_column_int8_t(void* row, const int templateRows, const int templateColumns, int32_t column, void* ret)
{
    array2d_matrix_set_row_column_template(int8_t, row, templateRows, templateColumns, column, ret);
}
DLLEXPORT void array2d_matrix_set_row_column_int16_t(void* row, const int templateRows, const int templateColumns, int32_t column, void* ret)
{
    array2d_matrix_set_row_column_template(int16_t, row, templateRows, templateColumns, column, ret);
}
DLLEXPORT void array2d_matrix_set_row_column_int32_t(void* row, const int templateRows, const int templateColumns, int32_t column, void* ret)
{
    array2d_matrix_set_row_column_template(int32_t, row, templateRows, templateColumns, column, ret);
}
DLLEXPORT void array2d_matrix_set_row_column_double(void* row, const int templateRows, const int templateColumns, int32_t column, void* ret)
{
    array2d_matrix_set_row_column_template(double, row, templateRows, templateColumns, column, ret);
}
DLLEXPORT void array2d_matrix_set_row_column_float(void* row, const int templateRows, const int templateColumns, int32_t column, void* ret)
{
    array2d_matrix_set_row_column_template(float, row, templateRows, templateColumns, column, ret);
}
DLLEXPORT void array2d_matrix_set_row_column_rgb_pixel(void* row, const int templateRows, const int templateColumns, int32_t column, void* ret)
{
    array2d_matrix_set_row_column_template(rgb_pixel, row, templateRows, templateColumns, column, ret);
}
DLLEXPORT void array2d_matrix_set_row_column_rgb_alpha_pixel(void* row, const int templateRows, const int templateColumns, int32_t column, void* ret)
{
    array2d_matrix_set_row_column_template(rgb_alpha_pixel, row, templateRows, templateColumns, column, ret);
}
DLLEXPORT void array2d_matrix_set_row_column_hsi_pixel(void* row, const int templateRows, const int templateColumns, int32_t column, void* ret)
{
    array2d_matrix_set_row_column_template(hsi_pixel, row, templateRows, templateColumns, column, ret);
}
DLLEXPORT void array2d_matrix_row_delete(matrix_element_type type, void* row, const int templateRows, const int templateColumns)
{
    switch(type)
    {
        case matrix_element_type::UInt8:
            array2d_matrix_row_delete_template(uint8_t, row, templateRows, templateColumns);
            break;
        case matrix_element_type::UInt16:
            array2d_matrix_row_delete_template(uint16_t, row, templateRows, templateColumns);
            break;
        case matrix_element_type::UInt32:
            array2d_matrix_row_delete_template(uint32_t, row, templateRows, templateColumns);
            break;
        case matrix_element_type::Int8:
            array2d_matrix_row_delete_template(int8_t, row, templateRows, templateColumns);
            break;
        case matrix_element_type::Int16:
            array2d_matrix_row_delete_template(int16_t, row, templateRows, templateColumns);
            break;
        case matrix_element_type::Int32:
            array2d_matrix_row_delete_template(int32_t, row, templateRows, templateColumns);
            break;
        case matrix_element_type::Float:
            array2d_matrix_row_delete_template(float, row, templateRows, templateColumns);
            break;
        case matrix_element_type::Double:
            array2d_matrix_row_delete_template(double, row, templateRows, templateColumns);
            break;
        case matrix_element_type::RgbPixel:
            array2d_matrix_row_delete_template(rgb_pixel, row, templateRows, templateColumns);
            break;
        case matrix_element_type::HsiPixel:
            array2d_matrix_row_delete_template(hsi_pixel, row, templateRows, templateColumns);
            break;
        case matrix_element_type::RgbAlphaPixel:
            array2d_matrix_row_delete_template(rgb_alpha_pixel, row, templateRows, templateColumns);
            break;
    }
}